# iot_misc

./: .gitignore  README.md  pyproject.toml
config/: config.example.toml
fswebcam-max31865/: README.md  fswebcam_max31865.py
fswebcam-max31865-scd41/: README.md  fswebcam_max31865_scd41.py  requirements.txt
fswebcam-scd30/: README.md  fswebcam_scd30.py
fswebcam/max31865/: fswebcam_max31865.py
fswebcam/max31865-scd-41/: README.md
fswebcam/scd30/: README.md  fswebcam_scd30.py  scd30_fswebcam_leaven_monitor.sql
prior/: ZMQSensorInterface.py  ZMQStreamHandler.py
prior/fswebcam/scd30/: README.md  scd30_fswebcam_leaven_monitor.sql
prior/interfaces/: BNO055_ZMQ.py  __init__.py
src/iot_misc/: __init__.py  __main__.py  __version__.py
src/iot_misc/abstract/: IoTSensor.py  __init__.py
src/iot_misc/app/: __init__.py  app.py  logger.py  session_init.py  utils.py
src/iot_misc/drivers/: BNO055.py  FSWEBCAM.py  SCD30.py  __init__.py
src/iot_misc/parsers/: __init__.py  cli.py  toml_conf.py  toml_config.py
src/iot_misc/sensors/: BNO055.py  __init__.py
src/iot_misc/workers/: RedisWorker.py  __init__.py  redis_worker.py
utilities/: summarize_sessions.py
utilities/xstream-to-parquet/: xstream-to-parquet.py
xstream-to-parquet/: README.md  requirements.txt  xstream-to-parquet.py
