[tool.poetry]
name = "iot-misc"
version = "0.0.1"
description = "Scripts for collecting data from various IoT devices."
authors = ["jason a. grafft <jason@grafft.co>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
