[tool.poetry]
name = "iot-misc"
version = "0.0.3"
description = "Command line interface for collecting data from miscellaneous IoT devices"
authors = [
    "jason a. grafft <jason@grafft.co>"
]
license = "ISC"
readme = "README.md"
packages = [
    { include = "iot_misc", from = "src" }
]
repository = "https://github.com/jagrafft/iot-misc"

[tool.poetry.dependencies]
python = "^3.8"
pytomlpp = "^1.0.13"
redis = "^4.5.4"
psycopg = {extras = ["pool"], version = "^3.1.8"}
pyarrow = "^11.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
